Second review correction:   1. Fixed a spelling error in abstract expore -> explore.   2. Changed table titles from italic to normal.   3. Changed figure titles from italic to normal.

--- a/Thesis/background/background.tex
+++ b/Thesis/background/background.tex
@@ -33,7 +33,7 @@ the body coil.
     \centering
     \centerline{\mbox{\includegraphics[width=4in]{background/images/MRI_hardware.eps}}}
   \end{minipage}
-\caption{\emph{Simplified block diagram of a typical MRI scanner}} \label{fig:scanner_block}
+\caption{Simplified block diagram of a typical MRI scanner} \label{fig:scanner_block}
 \end{figure}
 
 \subsection{Physics of Signal Formation and Detection}
@@ -117,7 +117,8 @@ expansion of the field described below.
     \centerline{\mbox{\includegraphics[width=3in]{background/images/coil_y.eps}}}
     \centerline{\mbox{\emph{(b)}}}
   \end{minipage}
-\caption{\emph{(a) Principal design of a Maxwell pair of coils generating the z-gradient field. (b) Golay arrangement of a coils producing a y-gradient. Note that the field direction coincides with the z axis.}} \label{fig:coil_axis}
+  \caption{(a) Principal design of a Maxwell pair of coils generating the z-gradient field. (b) Golay arrangement of a coils producing a y-gradient. Note that the field direction coincides with the z axis.} 
+  \label{fig:coil_axis}
 \end{figure}
 
 The design of the gradient coils in x and y-direction is more complicated. The principle design, called Golay arrangement, is shown in Fig. ~\ref{fig:coil_axis}(b). The x- and y-gradient coils are identical except for a rotation by 90 degrees. 
