--- a/Thesis/data_extraction/mri_tank.tex
+++ b/Thesis/data_extraction/mri_tank.tex
@@ -25,7 +25,7 @@ applied directly on water tank edge extraction from MR images.
     \centerline{\mbox{\includegraphics[width=3in]{data_extraction/images/MRI/sample_mri_phantom.eps}}}
   \end{minipage}
   \hfill
-  \caption{\emph{Noisy MR images, especially the lower tank}}
+  \caption{Noisy MR images, especially the lower tank}
   \label{fig:mri_noise_sample}
 \end{figure}
 
@@ -51,7 +51,7 @@ images, it can be described as follows:
           \centerline{\mbox{\includegraphics[width=3in]{data_extraction/images/MRI/find_edge_point.eps}}}
         \end{minipage}
       \end{center}
-      \caption{\emph{Histogram for finding edge points}}
+      \caption{Histogram for finding edge points}
       \label{fig:mri_edge_point_histograms}
     \end{figure}
   \item The resulting edge from previous step is very noisy. The following steps will be use to remove the
@@ -72,7 +72,7 @@ images, it can be described as follows:
     \centerline{\mbox{\includegraphics[width=5in]{data_extraction/images/MRI/histogram_state_machine.eps}}}
   \end{minipage}
   \hfill
-  \caption{\emph{gradient_histogram_state_machine}}
+  \caption{gradient_histogram_state_machine}
   \label{fig:histogram_state_machine}
 \end{figure}
 
@@ -102,7 +102,7 @@ images, it can be described as follows:
     \centerline{\mbox{\includegraphics[width=2.5in]{data_extraction/images/MRI/5_final_edge.eps}}}
     \centerline{\emph{(e)}}
   \end{minipage}
-  \caption{\emph{MRI surface intermediate edge results: (a) Raw edge (b) after removing short edges (c) after removing large bumps (d) after removing peaks (e) final edge}}
+  \caption{MRI surface intermediate edge results: (a) Raw edge (b) after removing short edges (c) after removing large bumps (d) after removing peaks (e) final edge}
   \label{fig:mri_edge_results}
 \end{figure}
 
@@ -116,7 +116,7 @@ Using this method, the final surface extracted from MR images for lower tank low
     \centerline{\mbox{\includegraphics[width=4.5in]{data_extraction/images/MRI/surface4.eps}}}
   \end{minipage}
   \hfill
-  \caption{\emph{Lower tank lower surface result.}}
+  \caption{Lower tank lower surface result.}
   \label{fig:surface_result}
 \end{figure}
 
