--- a/Thesis/isocenter/isocenter.tex
+++ b/Thesis/isocenter/isocenter.tex
@@ -45,7 +45,8 @@ Our algorithm is based on two standard assumptions~\cite{LSS06a,LSS06b,LSS08a,tl
   \end{minipage}
 %\hfill
 %
-\caption{\emph{Phantom modeling without distortion}} \label{fig:1}
+  \caption{Phantom modeling without distortion} 
+  \label{fig:1}
 %
 \end{figure}
 
@@ -156,7 +157,8 @@ Using a exaggerated distortion parameter we can visualize the shape of the disto
   \end{minipage}
 %\hfill
 %
-\caption{\emph{Phantom modeling with large distortions}} \label{fig:2}
+  \caption{Phantom modeling with large distortions}
+  \label{fig:2}
 %
 \end{figure}
 
@@ -181,7 +183,8 @@ Using a exaggerated distortion parameter we can visualize the shape of the disto
   \end{minipage}
 %\hfill
 %
-\caption{\emph{Phantom modeling with small distortions}} \label{fig:3}
+  \caption{Phantom modeling with small distortions}
+  \label{fig:3}
 %
 \end{figure}
 
@@ -312,7 +315,8 @@ they make a huge numeric difference as shown in \ref{fig:4}(a) and \ref{fig:4}(b
     \centerline{\mbox{\includegraphics[width=1.65in]{isocenter/images/simulation/tube_plane_small_error_y.eps}}}
     \centerline{\emph{(d) LS fit with y orientation.}}\medskip
   \end{minipage}
-\caption{\emph{Phantom modeling with distortion, showing differences in isocenter estimates due to how the LS equation is oriented.}} \label{fig:4}
+  \caption{Phantom modeling with distortion, showing differences in isocenter estimates due to how the LS equation is oriented.} 
+  \label{fig:4}
 %
 \end{figure}
 
@@ -338,7 +342,8 @@ estimation.
     \centerline{\mbox{\includegraphics[width=1.65in]{isocenter/images/simulation/tube_plane_diagonal_using_y.eps}}}
     \centerline{\emph{(b) LS using y orientation.}}\medskip
   \end{minipage}
-\caption{\emph{Phantom modeling with distortion, showing how diagonal tube planes without rotation do not improve the estimates produced.}} \label{fig:diagonal}
+  \caption{Phantom modeling with distortion, showing how diagonal tube planes without rotation do not improve the estimates produced.} 
+  \label{fig:diagonal}
 %
 \end{figure}
 
@@ -391,7 +396,8 @@ In table~\ref{table:symmetric}, the test is run using a symmetric x-y axis disto
     TLS  & 4.0800 & 0.1035  & 0.0800   & 4.0800 & 0.0964 & 0.0800 \\
     \hline
   \end{tabular}
-  \caption{\emph{Average of 200 runs using different methods for estimating the isocenter at $[4 \; 4 \; 3]$ in the presence of symmetrical distortion}} \label{table:symmetric}
+  \caption{Average of 200 runs using different methods for estimating the isocenter at $[4 \; 4 \; 3]$ in the presence of symmetrical distortion} 
+  \label{table:symmetric}
 \end{table}
 
 
@@ -410,7 +416,8 @@ When the distortion is not symmetrical the issue of proper estimation becomes cr
     TLS  & 9.5744 & 0.2616 & 5.5744   & 8.6905 & 0.2393 & 4.6905 \\
     \hline
   \end{tabular}
-  \caption{\emph{Average of 200 runs using different methods for estimating the isocenter at $[4 \; 4 \; 3]$ in the presence of non-symmetrical distortion }} \label{table:nonsymmetric}
+  \caption{Average of 200 runs using different methods for estimating the isocenter at $[4 \; 4 \; 3]$ in the presence of non-symmetrical distortion } 
+  \label{table:nonsymmetric}
 \end{table}
 
 
