--- a/Thesis/parameters/parameters_main.tex
+++ b/Thesis/parameters/parameters_main.tex
@@ -65,7 +65,7 @@ figure \ref{fig:correction_tube_pairing_xy} shows how the pairing is done for x,
       \centerline{\emph{(b)}}
     \end{minipage}
   \end{center}
-  \caption{\emph{Pairing of MR tubes. (a) Pairing for X-axis (b) Pairing for Y-axis}}
+  \caption{Pairing of MR tubes. (a) Pairing for X-axis (b) Pairing for Y-axis}
   \label{fig:correction_tube_pairing_xy}
 \end{figure}
 
@@ -96,7 +96,7 @@ show the pairing. \\
       % \centerline{\emph{(a)}}
     \end{minipage}
   \end{center}
-  \caption{\emph{Pairing of tank surfaces. }}
+  \caption{Pairing of tank surfaces. }
   \label{fig:correction_surface_pairing}
 \end{figure}
 
