--- a/Thesis/phantom/phantom_design.tex
+++ b/Thesis/phantom/phantom_design.tex
@@ -34,7 +34,7 @@ these designs to allow scanning was prohibitive, requiring a complete redesign.
     \centerline{\mbox{\includegraphics[width=2.75in]{phantom/images/brain_storm/model2.eps}}}
     \centerline{\emph{(b) Second model}}
   \end{minipage}
-  \caption{\emph{Initial designs for new phantom}}
+  \caption{Initial designs for new phantom}
   \label{fig:initial_phantom_design}
 \end{figure}
 
@@ -92,7 +92,7 @@ up being almost completely flat.  Every feature was met, and it was also the mos
     \centerline{\mbox{\includegraphics[width=1in]{phantom/images/tube_sealings/silicon.eps}}}
     \centerline{\emph{(e)}}
   \end{minipage}
-  \caption{\emph{(a) Paraffin wax at top with floatable silicon at bottom (b) Paraffin wax only (c) Machinable wax (d) Water weld (e) Silicon}}
+  \caption{(a) Paraffin wax at top with floatable silicon at bottom (b) Paraffin wax only (c) Machinable wax (d) Water weld (e) Silicon}
 \end{figure}
 
 \section{Updated Design}
