fix some file name issue when using latexmk

--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -340,7 +340,7 @@ while others not.
   \end{minipage}
   \begin{minipage}[t]{2.75in}
     \centering
-    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/sample/20121017_100/Coronal/result_canny_[0.001,0.002].eps}}}
+    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/sample/20121017_100/Coronal/result_canny_[0-001,0-002].eps}}}
     \centerline{\emph{(b) Edge result on image sequence \#100}}
   \end{minipage}
   \caption{\emph{Final edge results}}
