bibliography reference update.

--- a/Thesis/phantom/phantom_design.tex
+++ b/Thesis/phantom/phantom_design.tex
@@ -3,8 +3,8 @@
 Magnetic Resonance Imaging (MRI) provides an excellent modality for distinguishing different tissues in the
 human body, which is essential for medical applications. When MRI is used for stereotactic treatment planning,
 its geometric accuracy is crucial. Previous studies have been conducted to correct the distortion caused by
-nonlinearity of the MRI scanner’s magnetic gradient fields by imaging a cubic phantom \cite{simple_approach},
-\cite{tlee_iaeng} and defining
+nonlinearity of the MRI scanner’s magnetic gradient fields by imaging a cubic phantom \cite{Lang99},
+\cite{LSS08b} and defining
 distortion correction functions based on the distorted appearance its surfaces. Correct mathematical handling
 of the distortion correction function required that the cube was centered about the magnetic isocenter, which
 is defined as the common center of the three magnetic gradient fields and  is not very accurately known.
