--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,3 +1,18 @@
+@article{Wil46,
+author = {Robert Wilson},
+title  = {Radiological Use of Fast Protons},
+journal = {Radiology},
+year   = {1946},
+volumn = {47},
+pages  = {487 - 491},
+}
+
+@mastersthesis{tom,
+author = {T.S. Lee and K.E. Schubert and R.W. Schulte},
+title = {Software-Based Gradient Nonlinearity Distortion Correction},
+school = {California State University, San Bernaridno},
+year = {2006},
+}
 
  @INPROCEEDINGS{LSS06a,
    AUTHOR =       {T.S. Lee and K.E. Schubert and R.W. Schulte},
@@ -23,57 +38,134 @@
    publisher =    {US Education Service},
  }
 
-\bibitem{LSS06b}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Software Development For Correction Of Gradient-Nonlinearity Distortions In MR Images},''
-\newblock {\em Proceedings of the International Conference on Computer Science and its Applications}, 338-344, 2006
+@Comment \bibitem{LSS06b}
+@Comment T.S. Lee and K.E. Schubert and R.W. Schulte
+@Comment \newblock ``{Software Development For Correction Of Gradient-Nonlinearity Distortions In MR Images},''
+@Comment \newblock {\em Proceedings of the International Conference on Computer Science and its Applications}, 338-344, 2006
 
-\bibitem{LSS08a}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Computational Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
-\newblock {\em Proceeding of the World Conference of Engineering and Computer Science}, Oct, pp. 210-215, 2008
+@inproceedings{LSS08a,
+author    = {T.S. Lee and K.E. Schubert and R.W. Schulte},
+title     = {Computational Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},
+booktitle = {Proceeding of the World Conference of Engineering and Computer Science},
+year      = {2008},
+month     = {October}
+pages     = {210 - 215},
+}
+@Comment \bibitem{LSS08a}
+@Comment T.S. Lee and K.E. Schubert and R.W. Schulte
+@Comment \newblock ``{Computational Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
+@Comment \newblock {\em Proceeding of the World Conference of Engineering and Computer Science}, Oct, pp. 210-215, 2008
 
-% \bibitem{tleeiaeng}
-\bibitem{LSS08b}
-T.S. Lee and K.E. Schubert and R.W. Schulte
-\newblock ``{Software-Based Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
-\newblock {\em IAENG Transactions on Electrical and Electronics Engineering}, vol. I, 2008
+@article{LSS08b,
+author = {T.S. Lee and K.E. Schubert and R.W. Schulte},
+title = {Software-Based Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging}
+journal = {IAENG Transactions on Electrical and Electronics Engineering},
+year = {2008},
+volumn = {I}
+}
 
+@Comment % \bibitem{tleeiaeng}
+@Comment \bibitem{LSS08b}
+@Comment T.S. Lee and K.E. Schubert and R.W. Schulte
+@Comment \newblock ``{Software-Based Algorithm for Modeling and Correction of Gradient Nonlinearity Distortions in Magnetic Resonance Imaging},''
+@Comment \newblock {\em IAENG Transactions on Electrical and Electronics Engineering}, vol. I, 2008
 
-% \bibitem{simpleapproach}
-\bibitem{Lang99}
-S. Langlois, M. Desvignes, J.M. Constans, and M. Revenu,
-\newblock ``{MRI Geometric Distortion: A Simple Approach to Correcting the Effects of Non-linear Gradient Fields},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 9, pp. 821-831, 1999.
+@article{Lang99,
+author = {S. Langlois, M. Desvignes, J.M. Constans, and M. Revenu,},
+title = {MRI Geometric Distortion: A Simple Approach to Correcting the Effects of Non-linear Gradient Fields},
+journal = {J. Magn. Reson. Imaging},
+year = {1999},
+volumn = {9}, 
+pages = {821-831},
+}
 
-\bibitem{magsusceptibility}
-J. F. Schenck,
-\newblock ``{The Role of Magnetic Susceptibility In Magnetic Resonance Imaging: MRI Magnetic Compatibility of the First And Second Kind},''
-\newblock {\em Medical Physics}, vol. 23, iss 6, 1996, pp. 815–850.
+@Comment % \Bibitem{simpleapproach}
+@Comment \bibitem{Lang99}
+@Comment S. Langlois, M. Desvignes, J.M. Constans, and M. Revenu,
+@Comment \newblock ``{MRI Geometric Distortion: A Simple Approach to Correcting the Effects of Non-linear Gradient Fields},''
+@Comment \newblock {\em J. Magn. Reson. Imaging}, vol. 9, pp. 821-831, 1999.
 
-\bibitem{isocentericsc}
-R. Cai, K. Schubert, R. Schulte,
-\newblock ``{Computational Algorithm for Estimating the Gradient Isocenter of an MRI Scanner},''
-\newblock {\em Proceedings of the International Conference on Scientific Computing}, 2012, accepted for publication
+@article{mag_susceptibility,
+author = {J. F. Schenck,},
+title = {The Role of Magnetic Susceptibility In Magnetic Resonance Imaging: MRI Magnetic Compatibility of the First And Second Kind},
+journal = {Medical Physics},
+year = {1996},
+volumn = {23}, 
+pages = {815-850},
+number = {6},
+}
 
-\bibitem{Kond99}
-D. Kondziolka
-\newblock ``{Functional Radiosurgery},''
-\newblock {\em Neurosurgery}, vol. 44, pp. 12-20, 1999
+@Comment \bibitem{magsusceptibility}
+@Comment J. F. Schenck,
+@Comment \newblock ``{The Role of Magnetic Susceptibility In Magnetic Resonance Imaging: MRI Magnetic Compatibility of the First And Second Kind},''
+@Comment \newblock {\em Medical Physics}, vol. 23, iss 6, 1996, pp. 815–850.
 
-\bibitem{Dor05}
-S.J. Doran and L. Charles-Edwards and S.A. Reinsberg and M.O. Leach
-\newblock ``{A Complete Distortion Correction for MR Images: I. Gradient Warp Correction},''
-\newblock {\em Phys. Med. Biol.}, vol. 50, pp. 1243-1361, 2005
+@inproceedings{isocentericsc,
+author    = {R. Cai and K. Schubert and R. Schulte},
+title     = {Proceedings of the International Conference on Scientific Computing},
+booktitle = {Proceedings of the International Conference on Scientific Computing}, 
+year      = {2012},
+}
+@Comment \bibitem{isocentericsc}
+@Comment R. Cai, K. Schubert, R. Schulte,
+@Comment \newblock ``{Computational Algorithm for Estimating the Gradient Isocenter of an MRI Scanner},''
+@Comment \newblock {\em Proceedings of the International Conference on Scientific Computing}, 2012, accepted for publication
 
-\bibitem{Wang04a}
-D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
-\newblock ``{Geometric Distortion in Clinical MRI Systems Part I: Evaluation Using a 3D Phantom},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1211--1221, 2004
+@article{Kond99,
+author  = {D. Kondziolka},
+title   = {Functional Radiolosurgery},
+journal = {Neurosurgery},
+year    = {1999},
+volumn  = {44},
+pages   = {12 - 20},
+}
 
-\bibitem{Wang04b}
-D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
-\newblock ``{Geometric Distortion in Clinical MRI Systems Part II: Correction Using a 3D Phantom},''
-\newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1223--1232, 2004
+@Comment \bibitem{Kond99}
+@Comment D. Kondziolka
+@Comment \newblock ``{Functional Radiosurgery},''
+@Comment \newblock {\em Neurosurgery}, vol. 44, pp. 12-20, 1999
 
-\end{thebibliography}
+@article{Dor05,
+author  = {S.J. Doran and L. Charles-Edwards and S.A. Reinsberg and M.O. Leach},
+title   = {A Complete Distortion Correction for MR Images: I. Gradient Warp Correction},
+journal = {Phys. Med. Biol.},
+year    = {2005},
+volumn  = {50},
+pages   = {1243-1361},
+}
+
+@Comment \bibitem{Dor05}
+@Comment S.J. Doran and L. Charles-Edwards and S.A. Reinsberg and M.O. Leach
+@Comment \newblock ``{A Complete Distortion Correction for MR Images: I. Gradient Warp Correction},''
+@Comment \newblock {\em Phys. Med. Biol.}, vol. 50, pp. 1243-1361, 2005
+
+@article{Wang04a,
+author  = {D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter},
+title   = {Geometric Distortion in Clinical MRI Systems Part I: Evaluation Using a 3D Phantom},
+journal = {J. Magn. Reson. Imaging},
+year    = {2004},
+volumn  = {22},
+pages   = {1211 - 1221},
+}
+
+@Comment \bibitem{Wang04a}
+@Comment D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
+@Comment \newblock ``{Geometric Distortion in Clinical MRI Systems Part I: Evaluation Using a 3D Phantom},''
+@Comment \newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1211--1221, 2004
+
+@article{Wang04b,
+author = {D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter},
+title = {Geometric Distortion in Clinical MRI Systems Part II: Correction Using a 3D Phantom},
+journal = {J. Magn. Reson. Imaging},
+year = {2004},
+volumn = {22},
+pages = {1223 - 1232},
+}
+
+@Comment \bibitem{Wang04b}
+@Comment D. Wang and W. Strugnell and G. Cowin and D.M. Doddrell and R. Slaughter
+@Comment \newblock ``{Geometric Distortion in Clinical MRI Systems Part II: Correction Using a 3D Phantom},''
+@Comment \newblock {\em J. Magn. Reson. Imaging}, vol. 22, pp. 1223--1232, 2004
+
+@Comment \end{thebibliography}
+
