fixed an eps related error

--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -353,7 +353,7 @@ while others not.
   \end{minipage}
   \begin{minipage}[b]{2.75in}
     \centering
-    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/sample/20121017_100/Coronal/result_canny_[0.001,0.002].eps}}}
+    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/sample/20121017_100/Coronal/result_canny_[0_001,0_002].eps}}}
     \centerline{\emph{(b)}}
   \end{minipage}
   \caption{Final edge results: (a) Edge result on image sequence \#270 (b) Edge result on image sequence \#100}
